Mise en forme du header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" href="favicon.png">
     <title>Eva Delgado - Photographie</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Titre de la page</h1>
+        <a href="./index.html"><img class="logo" src="assets/icons/logo.png" alt="Logo Eva Delgado Photo"></a>
+        <nav>
+            <ul>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Prestations</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section>
