Mise en forme du slider

--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
         </nav>
     </header>
 
+<section class="slider">
+    <div class="slider-inner">
+        <img src="assets/images/slider/maried_couple_kissing.jpg" alt="Photograph of a married couple kissing">
+        <img src="assets/images/slider/married_couple_exchanging_rings.jpg"
+            alt="Photograph of a married couple exchanging wedding rings">
+            <img src="assets/images/slider/wedding_rings.jpg" alt="Photograph of wedding rings">
+    </div>
+</section>
+
+
     <section>
-        <h2>Section principale</h2>
+        <h1>A propos</h1>
         <p>Ceci est un paragraphe</p>
     </section>
 
@@ -37,7 +47,7 @@
         <p>© Eva Delgado - 2024</p>
         <p>Tous droits réservés.</p>
     </footer>
-
+    <script src="slider.js"></script>
 </body>
 
 </html>
