--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 <section class="slider">
     <div class="slider-inner">
-        <img src="assets/images/slider/maried_couple_kissing.jpg" alt="Photograph of a married couple kissing">
-        <img src="assets/images/slider/married_couple_exchanging_rings.jpg"
+        <img src="assets/images/slider/maried_couple_kissing.webp" class="active first" alt="Photograph of a married couple kissing">
+        <img src="assets/images/slider/married_couple_exchanging_rings.webp"
             alt="Photograph of a married couple exchanging wedding rings">
-            <img src="assets/images/slider/wedding_rings.jpg" alt="Photograph of wedding rings">
+            <img src="assets/images/slider/wedding_rings.webp" alt="Photograph of wedding rings">
     </div>
 </section>
 
