mise en forme section à propos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="favicon.png">
@@ -21,26 +23,40 @@
         <a href="./index.html"><img class="logo" src="assets/icons/logo.png" alt="Logo Eva Delgado Photo"></a>
         <nav>
             <ul>
-                <li><a href="#">A propos</a></li>
+                <li><a href="#àpropos">A propos</a></li>
                 <li><a href="#">Prestations</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-<section class="slider">
-    <div class="slider-inner">
-        <img src="assets/images/slider/maried_couple_kissing.webp" class="active first" alt="Photograph of a married couple kissing">
-        <img src="assets/images/slider/married_couple_exchanging_rings.webp"
-            alt="Photograph of a married couple exchanging wedding rings">
+    <section class="slider">
+        <div class="slider-inner">
+            <img src="assets/images/slider/maried_couple_kissing.webp" class="active first"
+                alt="Photograph of a married couple kissing">
+            <img src="assets/images/slider/married_couple_exchanging_rings.webp"
+                alt="Photograph of a married couple exchanging wedding rings">
             <img src="assets/images/slider/wedding_rings.webp" alt="Photograph of wedding rings">
-    </div>
-</section>
+        </div>
+    </section>
 
 
-    <section>
-        <h1>A propos</h1>
-        <p>Ceci est un paragraphe</p>
+    <section id="àpropos">
+        <h1>Eva Delgado, photographe de mariage</h1>
+        <div class="about-container">
+            <img src="assets/images/eva_delgado_portrait.jpg" alt="Eva Delgado's portrait">
+            <div class="about-text">
+                <p>Passionnée de photographie depuis 7 ans, je capture vos moments les plus précieux à travers mon
+                    objectif
+                    pour les tranformer en souvenirs intemporels.</p>
+                <p>Ma spécialité ? Photographier chaque sourire, chaque étreinte, chaque instant de bonheur. </p>
+                <p>Parcourez ma galerie pour découvrir mon travail et laissez-vous inspirer par les moments magiques que
+                    j'ai eu le
+                    privilège de capturer.</p>
+                <p>Si vous cherchez à immortaliser vos propres moments précieux, je serais honorée de vous
+                    accompagner dans cette aventure photographique.</p>
+            </div>
+        </div>
     </section>
 
     <footer>
